<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayerapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/artists"
                    style="@style/CategoryStyle"
                    android:background="@color/category_artists"
                    android:drawableLeft="@drawable/artists"
                    android:text="@string/category_artists" />

                <TextView
                    android:id="@+id/albums"
                    style="@style/CategoryStyle"
                    android:background="@color/category_albums"
                    android:drawableLeft="@drawable/albums"
                    android:text="@string/category_albums" />

                <TextView
                    android:id="@+id/songs"
                    style="@style/CategoryStyle"
                    android:background="@color/category_songs"
                    android:drawableLeft="@drawable/songs"
                    android:text="@string/category_songs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/genres"
                    style="@style/CategoryStyle"
                    android:background="@color/category_genres"
                    android:drawableLeft="@drawable/genres"
                    android:text="@string/category_genres" />

                <TextView
                    android:id="@+id/playlist"
                    style="@style/CategoryStyle"
                    android:background="@color/category_playlists"
                    android:drawableLeft="@drawable/playlists"
                    android:text="@string/category_playlists" />

                <TextView
                    android:id="@+id/search"
                    style="@style/CategoryStyle"
                    android:background="@color/category_search"
                    android:drawableLeft="@drawable/search"
                    android:text="@string/category_search" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
