<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayerapp.NewPlaylistActivity">

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@color/category_playlists"
        android:padding="8dp"
        android:text="@string/home"
        android:textAllCaps="true"
        android:textColor="@color/primary_dark_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name_playlist"
        android:inputType="textCapWords"
        android:padding="8dp" />

    <TextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@color/category_playlists"
        android:padding="8dp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/primary_dark_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_new_playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />


</LinearLayout>
